--- a/src/components/trip-info/trip-info.component.html
+++ b/src/components/trip-info/trip-info.component.html
@@ -1,5 +1,58 @@
-<div class="row">
-  <div class="col-md-12">
-    <p>Trip info Component...</p>
+<form>
+  <div class="row">
+    <div class="col-md-12">
+      <img
+        src="/src/content/img/header.png"
+        alt="Connect to flights by celebrity"
+      />
+    </div>
   </div>
-</div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <h3 class="title text-center">Enter Your Trip Information</h3>
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <input type="text" placeholder="Reservation Number" />
+    </div>
+    <div class="form-group col-md-6">
+      <input type="text" placeholder="Last name on Reservation" />
+    </div>
+  </div>
+  <br />
+  <br />
+  <br />
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label class="small">SHIP</label>
+      <br />
+      <select></select>
+    </div>
+
+    <div class="form-group col-md-6">
+      <label class="small">SAIL DATE</label>
+      <br />
+      <select class="col-md-4"></select>
+      <select class="col-md-4"></select>
+      <select class="col-md-4"></select>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="form-check text-center">
+      <input class="form-check-input" type="checkbox" />
+      <label class="form-check-label remember-info">
+        Remember my information
+      </label>
+    </div>
+  </div>
+
+  <div class="text-center">
+    <button type="submit" class="btn btn-primary">
+      FIND RESERVATION
+    </button>
+  </div>
+</form>
