--- a/src/components/trip-info/trip-info.component.html
+++ b/src/components/trip-info/trip-info.component.html
@@ -19,6 +19,7 @@
       <div class="form-group col-md-6">
         <small ng-hide="!$ctrl.readOnly">Reservation Number</small>
         <input
+          id="reservation-number"
           ng-model="$ctrl.tripInfo.reservationNumber"
           maxlength="7"
           type="text"
@@ -27,8 +28,9 @@
         />
       </div>
       <div class="form-group col-md-6">
-        <small ng-hide="!$ctrl.readOnly">Reservation Number</small>
+        <small ng-hide="!$ctrl.readOnly">Last Name on Reservation</small>
         <input
+          id="last-name-on-reservation"
           ng-model="$ctrl.tripInfo.lastNameOnReservation"
           type="text"
           required
@@ -43,8 +45,9 @@
       <div class="form-group col-md-6">
         <label class="small">SHIP</label>
         <br />
-        <small ng-hide="!$ctrl.readOnly">Reservation Number</small>
+        <small ng-hide="!$ctrl.readOnly">Select Ship</small>
         <select
+          id="ships"
           required
           ng-model="$ctrl.tripInfo.ship"
           ng-options="ship.id as ship.name for ship in $ctrl.ships"
@@ -65,6 +68,7 @@
           <tr>
             <td>
               <select
+                id="month"
                 required
                 ng-model="$ctrl.tripInfo.month"
                 ng-options="month.number as month.name for month in $ctrl.months"
@@ -74,6 +78,7 @@
             </td>
             <td>
               <select
+                id="day"
                 required
                 ng-model="$ctrl.tripInfo.day"
                 ng-options="day as day for day in $ctrl.days"
@@ -83,6 +88,7 @@
             </td>
             <td>
               <select
+                id="year"
                 required
                 ng-model="$ctrl.tripInfo.year"
                 ng-options="year as year for year in $ctrl.years"
